--- a/ZmqDebuggerTool/appsettings.json
+++ b/ZmqDebuggerTool/appsettings.json
@@ -1,5 +1,6 @@
 {
   "RequestAddress": "tcp://localhost:3000",
+  "SubscriberAddress": "tcp://localhost:5000",
   "Commands": {
     "设置参数_单次测量": {
       "theme": "setMeasureParams",
