增加zmq发布端

--- a/ZmqDebuggerTool/ZmqDebuggerTool.csproj
+++ b/ZmqDebuggerTool/ZmqDebuggerTool.csproj
@@ -32,5 +32,11 @@
       <None Update="appsettings.json">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="zlib.dll">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="zlib1.dll">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 </Project>
