将32位zlib1.dll改为64位的

--- a/ZmqDebuggerTool/ZmqDebuggerTool.csproj
+++ b/ZmqDebuggerTool/ZmqDebuggerTool.csproj
@@ -9,6 +9,7 @@
     <UseWPF>true</UseWPF>
     <ApplicationIcon>Tools-1种尺寸.ico</ApplicationIcon>
     <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
+    <Platforms>AnyCPU;x86</Platforms>
 	
   </PropertyGroup>
 
@@ -27,13 +28,7 @@
     </ItemGroup>
 	
     <ItemGroup>
-      <None Update="App.json">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </None>
       <None Update="appsettings.json">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </None>
-      <None Update="zlib.dll">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
       <None Update="zlib1.dll">
