--- a/ZmqDebuggerTool/appsettings.json
+++ b/ZmqDebuggerTool/appsettings.json
@@ -1,6 +1,7 @@
 {
   "RequestAddress": "tcp://localhost:3000",
   "SubscriberAddress": "tcp://localhost:2000",
+  "PublisherAddress": "tcp://*:2000",
   "Commands": {
     "设置参数_单次测量": {
       "theme": "setMeasureParams",
@@ -29,6 +30,46 @@
       "param": "stopMeasure"
     }
   },
+  "RequestOrders": [
+    {
+      "Title": "设置参数_单次测量",
+      "Message": {
+        "theme": "setMeasureParams",
+        //不同的控制参数，单次测量、采集光谱
+        "measureMode": "单次测量",
+        "sampleInformation": "JGSC-BTF",
+        //测量次数
+        "value": 200
+      }
+    },
+    {
+      "Title": "设置参数_采集光谱",
+      "Message": {
+        "theme": "setMeasureParams",
+        //不同的控制参数，单次测量、采集光谱
+        "measureMode": "采集光谱",
+        "sampleInformation": "JGSC-BTF",
+        //测量次数
+        "value": 200
+      }
+    },
+    {
+      "Title": "启动测量",
+      "Message": {
+        "theme": "measureControl",
+        //startMeasure stopMeasure
+        "param": "startMeasure"
+      }
+    },
+    {
+      "Title": "停止测量",
+      "Message": {
+        "theme": "measureControl",
+        //startMeasure stopMeasure
+        "param": "stopMeasure"
+      }
+    }
+  ],
   "PublishOrders": [
     {
       "Title": "准备测量",
