简化zmq调试逻辑

--- a/ZmqDebuggerTool/appsettings.json
+++ b/ZmqDebuggerTool/appsettings.json
@@ -1,56 +1,30 @@
 {
   "RequestAddress": "tcp://localhost:3000",
-  "SubscriberAddress": "tcp://localhost:2000",
-  "PublisherAddress": "tcp://*:2000",
-  "Commands": {
-    "设置参数_单次测量": {
-      "theme": "setMeasureParams",
-      //不同的控制参数，单次测量、采集光谱
-      "measureMode": "单次测量",
-      "sampleInformation": "JGSC-BTF",
-      //测量次数
-      "value": 200
-    },
-    "设置参数_采集光谱": {
-      "theme": "setMeasureParams",
-      //不同的控制参数，单次测量、采集光谱
-      "measureMode": "采集光谱",
-      "sampleInformation": "JGSC-BTF",
-      //测量次数
-      "value": 200
-    },
-    "启动测量": {
-      "theme": "measureControl",
-      //startMeasure stopMeasure
-      "param": "startMeasure"
-    },
-    "停止测量": {
-      "theme": "measureControl",
-      //startMeasure stopMeasure
-      "param": "stopMeasure"
-    }
-  },
   "RequestOrders": [
     {
       "Title": "设置参数_单次测量",
       "Message": {
         "theme": "setMeasureParams",
-        //不同的控制参数，单次测量、采集光谱
-        "measureMode": "单次测量",
-        "sampleInformation": "JGSC-BTF",
-        //测量次数
-        "value": 200
+        "param": {
+          "measureMode": "单次测量",
+          //样品信息，为了和其它命名一致的妥协结果
+          "sampleInformation": "JGSC-BTF",
+          //采样次数
+          "sampleCount": 100
+        }
       }
     },
     {
       "Title": "设置参数_采集光谱",
       "Message": {
         "theme": "setMeasureParams",
-        //不同的控制参数，单次测量、采集光谱
-        "measureMode": "采集光谱",
-        "sampleInformation": "JGSC-BTF",
-        //测量次数
-        "value": 200
+        "param": {
+          "measureMode": "采集光谱",
+          //样品信息，为了和其它命名一致的妥协结果
+          "sampleInformation": "JGSC-BTF",
+          //采样次数
+          "sampleCount": 100
+        }
       }
     },
     {
@@ -70,6 +44,22 @@
       }
     }
   ],
+  "SubscriberAddress": "tcp://localhost:2000",
+  "SubscriberOrders": [
+    {
+      "Title": "准备测量",
+      "Message": "120 156 99 96 0 3 190 192 99 145 236 185 222 19 207 51 232 129 32 0 38 145 4 40"
+    },
+    {
+      "Title": "更新进度",
+      "Message": "120 156 99 96 96 96 116 16 97 0 3 0 2 161 0 86"
+    },
+    {
+      "Title": "本次测量结束",
+      "Message": "120 156 99 96 0 3 190 116 157 108 197 92 239 137 231 235 46 167 199 255 103 4 0 44 22 6 93"
+    }
+  ],
+  "PublisherAddress": "tcp://*:2000",
   "PublishOrders": [
     {
       "Title": "准备测量",
@@ -84,5 +74,4 @@
       "Message": "120 156 99 96 0 3 190 116 157 108 197 92 239 137 231 235 46 167 199 255 103 4 0 44 22 6 93"
     }
   ]
-
 }
