--- a/ZmqDebuggerTool/appsettings.json
+++ b/ZmqDebuggerTool/appsettings.json
@@ -44,6 +44,21 @@
       }
     }
   ],
+  "ResponseAddress": "tcp://*:3000",
+  "ResponseOrders": [
+    {
+      "Title": "准备测量",
+      "Message": "120 156 99 96 0 3 190 192 99 145 236 185 222 19 207 51 232 129 32 0 38 145 4 40"
+    },
+    {
+      "Title": "更新进度",
+      "Message": "120 156 99 96 96 96 116 16 97 0 3 0 2 161 0 86"
+    },
+    {
+      "Title": "本次测量结束",
+      "Message": "120 156 99 96 0 3 190 116 157 108 197 92 239 137 231 235 46 167 199 255 103 4 0 44 22 6 93"
+    }
+  ],
   "SubscriberAddress": "tcp://localhost:2000",
   "SubscriberOrders": [
     {
