--- a/ZmqDebuggerTool/ZmqDebuggerTool.csproj
+++ b/ZmqDebuggerTool/ZmqDebuggerTool.csproj
@@ -7,14 +7,15 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
-    <ApplicationIcon>Tools-1种尺寸.ico</ApplicationIcon>
     <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
     <Platforms>AnyCPU;x86</Platforms>
+    <PackageIcon>zmq.ico</PackageIcon>
+    <ApplicationIcon>zmq.ico</ApplicationIcon>
 	
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="Tools-1种尺寸.ico" />
+    <Content Include="zmq.ico" />
   </ItemGroup>
 	
     <ItemGroup>
@@ -30,9 +31,14 @@
       <None Update="zlib1.dll">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="zmq.ico">
+        <Pack>True</Pack>
+        <PackagePath>\</PackagePath>
+      </None>
     </ItemGroup>
 	
     <ItemGroup>
+      <Folder Include="Properties\PublishProfiles\" />
       <Folder Include="ViewModel\Base\" />
     </ItemGroup>
 </Project>
