--- a/CommnuiactionDebuggerTool/CommnuiactionDebuggerTool.csproj
+++ b/CommnuiactionDebuggerTool/CommnuiactionDebuggerTool.csproj
@@ -61,6 +61,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Configuration.ini">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Tools_1.ico">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
