--- a/Utils/Utils.csproj
+++ b/Utils/Utils.csproj
@@ -5,4 +5,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="IniFileParserStandard" Version="1.0.1" />
+  </ItemGroup>
+
 </Project>
