--- a/CommnuiactionDebuggerTool/Configuration.ini
+++ b/CommnuiactionDebuggerTool/Configuration.ini
@@ -1,5 +1,7 @@
-﻿[TCP客户端]
+﻿[TCP客户端1]
+CommunicationType=TcpClient
 Address=192.168.1.3:8000
 
-[TCP服务端]
+[TCP服务端1]
+CommunicationType=TcpServer
 Address=192.168.1.3:8000
