--- a/CommnuiactionDebuggerTool/Configuration.ini
+++ b/CommnuiactionDebuggerTool/Configuration.ini
@@ -5,3 +5,11 @@ Address=192.168.1.3:8000
 [TCP服务端1]
 CommunicationType=TcpServer
 Address=192.168.1.3:8000
+
+[串口1]
+CommunicationType=SerialPortClient
+PortName=COM255
+BaudRate=9600
+DataBits=8
+StopBits=One
+Parity=None
