--- a/CommnuiactionDebuggerTool/Configuration.ini
+++ b/CommnuiactionDebuggerTool/Configuration.ini
@@ -6,6 +6,10 @@ Address=192.168.1.3:8000
 CommunicationType=TcpServer
 Address=192.168.1.3:8000
 
+[ZmqRequest1]
+CommunicationType=ZmqRequest
+Address=127.0.0.1:8001
+
 [串口1]
 CommunicationType=SerialPortClient
 PortName=COM255
@@ -13,3 +17,4 @@ BaudRate=9600
 DataBits=8
 StopBits=One
 Parity=None
+
