--- a/CommnuiactionDebuggerTool/CommnuiactionDebuggerTool.csproj
+++ b/CommnuiactionDebuggerTool/CommnuiactionDebuggerTool.csproj
@@ -7,6 +7,7 @@
     <UseWPF>true</UseWPF>
     <ApplicationIcon>Images\debug-1种尺寸.ico</ApplicationIcon>
     <ApplicationManifest>app.manifest</ApplicationManifest>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
