--- a/ZmqDebuggerTool/ZmqDebuggerTool.csproj
+++ b/ZmqDebuggerTool/ZmqDebuggerTool.csproj
@@ -7,7 +7,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
-    <Platforms>AnyCPU;x86</Platforms>
+    <Platforms>AnyCPU;x86;x64</Platforms>
     <PackageIcon>zmq.ico</PackageIcon>
     <ApplicationIcon>zmq.ico</ApplicationIcon>
 	
